# streamdeck-linux-gui

./: .gitignore  .release.yml  .safety-policy.yml  404.html  CHANGELOG.md  README-de.md  README.md  index.html  install.sh  mkdocs.yml  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: docs.yml  publish.yaml  release.yaml  test-docs.yml  test.yaml
build-aux/: README.md  com.foursthreeti.streamdeck-linux-gui.json  com.streamdeck-linux-gui.json  com.streamdeck.linux-gui.json  com.timothycrosely.streamdeck-ui.json
contributing/acknowledgements/: index.html
contributing/code-of-conduct/: index.html
contributing/coding-standard/: index.html
contributing/contributing-guide/: index.html
docs/: index.md  troubleshooting.md
docs/contributing/: acknowledgements.md  contributing-guide.md
docs/installation/: arch.md  centos.md  debian.md  fedora.md  opensuse.md  source.md  systemd.md  ubuntu.md
installation/arch/: index.html
installation/centos/: index.html
installation/fedora/: index.html
installation/nixos/: index.html
installation/opensuse/: index.html
installation/source/: index.html
installation/systemd/: index.html
installation/ubuntu/: index.html
scripts/: lint-docs.sh  lint.sh  run-python-matrix.sh  streamdeck.service  ubuntu_install.sh
search/: search_index.json
streamdeck_ui/: __init__.py  api.py  button.ui  config.py  gui.py  main.ui  model.py  old_button.ui  old_ui_button.py  plugins.py  resources_rc.py  stream_deck_monitor.py  ui_button.py  ui_main.py
tests/: test_config.py
troubleshooting/: index.html
(+18 files in other folders)
